# dahdi-linux

./: .gitignore  .version  ChangeLog  Dockerfile  Makefile  README  UPGRADE.txt  acinclude.m4  autoconfig.h.in  bittest.h  blacklist.sample  bootstrap.sh  configure  configure.ac  dahdi-bash-completion  dahdi-linux-2.4.1-summary.html  dahdi-linux-2.4.1-summary.txt  dahdi-linux-2.4.1.1-summary.html  dahdi-linux-2.4.1.1-summary.txt  dahdi-linux-2.4.1.2-summary.html  dahdi-linux-2.4.1.2-summary.txt  dahdi-modules  dahdi.init  dahdi.rules  dahdi.xml  dahdi_cfg.c  dahdi_cfg_device_args  dahdi_diag.c  dahdi_handle_device  dahdi_maint.c  dahdi_map  dahdi_monitor.c  dahdi_pcap.c  dahdi_scan.c  dahdi_span_assignments  dahdi_span_config  dahdi_span_types  dahdi_speed.c  dahdi_test.c  dahdi_tool.c  (+31 more)
.github/workflows/: kernel-check.yaml  kernel-lts-test.yaml  kernel-lts.yaml  kernel-mainline.yaml  kernel-next.yaml  kernel-stable.yaml
build_tools/: builder  dahdi_svn_tarball  dahdi_sysfs_copy  dkms-helper  dump_sys_state  genmodconf  genudevrules  install_firmware  kernel-cp  kernel-doc  live_dahdi  make_dist  make_firmware_object.in  make_static_devs  make_tree  make_version  make_version_c  make_version_h  menuselect-deps.in  test_kernel_git  uninstall-modules
ci/: Dockerfile  build-dahdi.sh
doc/: dahdi_cfg.8  dahdi_diag.8  dahdi_maint.8  dahdi_map.8  dahdi_monitor.8  dahdi_scan.8  dahdi_span_assignments.8  dahdi_span_types.8  dahdi_test.8  dahdi_tool.8  dahdi_waitfor_span_assignments.8  fxotune.8  fxstest.8  patgen.8  pattest.8  span_assignments.8  span_types.8
drivers/dahdi/: Kbuild  Kconfig  adt_lec.c  adt_lec.h  arith.h  biquad.h  dahdi-base.c  dahdi-sysfs-chan.c  dahdi-sysfs.c  dahdi-sysfs.h  dahdi-version.c  dahdi.h  dahdi_dummy.c  dahdi_dynamic.c  dahdi_dynamic_eth.c  dahdi_dynamic_ethmf.c  dahdi_dynamic_loc.c  dahdi_echocan_jpah.c  dahdi_echocan_kb1.c  dahdi_echocan_mg2.c  dahdi_echocan_oslec.c  dahdi_echocan_sec.c  dahdi_echocan_sec2.c  dahdi_transcode.c  digits.h  ecdis.h  fir.h  fxo_modes.h  makefw.c  pciradio.c  pciradio.rbt  proslic.h  tor2-hw.h  tor2.c  tormenta2.rbt  wcaxx-base.c  wcfxo.c  wct1xxp.c  wctdm.c  wcte11xp.c  (+8 more)
drivers/dahdi/datamods/: Makefile  hdlc_fr.c  hdlc_generic.c  syncppp.c
drivers/dahdi/firmware/: Makefile  make_firmware_object.in
drivers/dahdi/hpec/: dahdi_echocan_hpec.c  hpec.h  hpec_user.h
drivers/dahdi/oct612x/: Kbuild  Makefile  oct612x-user.c  oct612x.h  test.c
drivers/dahdi/oct612x/include/: digium_unused.h  octtypewin.h
drivers/dahdi/opvxa1200/: Kbuild  Makefile  base.c
drivers/dahdi/voicebus/: GpakApi.c  GpakApi.h  GpakCust.c  GpakCust.h  GpakHpi.h  Kbuild  gpakErrs.h  gpakenum.h  voicebus.c  voicebus.h  voicebus_net.c  voicebus_net.h  vpmadtreg.c  vpmadtreg.h  vpmoct.c  vpmoct.h
drivers/dahdi/vpmadt032_loader/: dahdi_vpmadt032_loader.c
drivers/dahdi/wcb4xxp/: Kbuild  base.c  wcb4xxp.h
drivers/dahdi/wct4xxp/: Kbuild  base.c  vpm450m.c  vpm450m.h  wct4xxp-diag.c  wct4xxp.h
drivers/dahdi/wctc4xxp/: Kbuild  Makefile  base.c
drivers/dahdi/wctdm24xxp/: Kbuild  Makefile  base.c  wctdm24xxp.h  xhfc.c  xhfc.h
drivers/dahdi/wcte12xp/: GpakHpi.h  Kbuild  base.c  wcte12xp.h
drivers/dahdi/xpp/: Changelog_xpp  Kbuild  Kconfig  Makefile  XppConfig.pm  card_bri.c  card_bri.h  card_echo.c  card_echo.h  card_fxo.c  card_fxo.h  card_fxs.c  card_fxs.h  card_global.c  card_global.h  card_pri.c  card_pri.h  dahdi_debug.c  dahdi_debug.h  init_card_1_30  init_card_2_30  init_card_3_30  init_card_4_30  init_card_5_30  init_card_6_30  mmapbus.c  mmapbus.h  mmapdrv.c  param_doc  parport_debug.c  parport_debug.h  print_fxo_modes.c  xbus-core.c  xbus-core.h  xbus-pcm.c  xbus-pcm.h  xbus-sysfs.c  xdefs.h  xframe_queue.c  xframe_queue.h  (+9 more)
drivers/dahdi/xpp/firmwares/: FPGA_1141.hex  FPGA_1151.hex  FPGA_1161.201.hex  FPGA_1161.202.hex  FPGA_1161.hex  FPGA_FXS.hex  LICENSE.firmware  Makefile  PIC_TYPE_1.hex  PIC_TYPE_2.hex  PIC_TYPE_3.hex  PIC_TYPE_4.hex  PIC_TYPE_6.hex  README  USB_FW.201.hex  USB_FW.202.hex  USB_FW.hex  USB_RECOV.hex
hotplug/: dahdi_handle_device  dahdi_span_config
hotplug/handle_device.d/: 10-span-types  20-span-assignments
hotplug/span_config.d/: 10-dahdi-cfg  20-fxotune  50-asterisk
include/dahdi/: Kbuild  dahdi_config.h  fasthdlc.h  kernel.h  user.h  wctdm_user.h
ppp/: Makefile  dahdi.c
test/: test-build.sh
test/docker/: centos6  centos7  debianstable  debiantesting  fedorarawhide
xpp/: Makefile  README.Astribank  astribank_allow.8  astribank_allow.c  astribank_hexload.8  astribank_hexload.c  astribank_hook  astribank_is_starting.8  astribank_is_starting.c  astribank_license.c  astribank_license.h  astribank_tool.8  astribank_tool.c  astribank_upgrade  astribank_usb.c  astribank_usb.h  dahdi.cgi  dahdi_drivers  dahdi_genconf  dahdi_hardware  dahdi_registration  debug.c  debug.h  echo_loader.c  echo_loader.h  fpga_load.8  fpga_load.c  genconf_parameters  hexfile.c  hexfile.h  lsdahdi  mpp.h  mpp_funcs.c  mpp_funcs.h  mpptalk.c  mpptalk.h  mpptalk_defs.h  pic_loader.c  pic_loader.h  test_parse.c  (+11 more)
xpp/oct612x/: Makefile  get_discards  octasic-helper
xpp/oct612x/apilib/bt/: octapi_bt0.c  octapi_bt0_private.h
xpp/oct612x/apilib/largmath/: octapi_largmath.c
xpp/oct612x/include/: octdef.h  octmac.h  octosdependant.h  octtype.h  octtypevx.h
xpp/oct612x/include/apilib/: octapi_largmath.h  octapi_llman.h
xpp/oct612x/include/oct6100api/: oct6100_adpcm_chan_inst.h  oct6100_adpcm_chan_pub.h  oct6100_api.h  (+15 more)
xpp/perl_modules/: Dahdi.pm
xpp/perl_modules/Dahdi/: Chans.pm  Hardware.pm  Span.pm  Utils.pm  Xpp.pm
xpp/xtalk/: debug.c  debug.h  xlist.c  xlist.h  xtalk.c  xtalk.h  xtalk_defs.h  xusb.c  xusb.h
(+77 files in other folders)
